--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -7,6 +7,7 @@
     <h3>Comments</h3>
     {{#each comments}}
       <p>{{this.content}}</p>
+      <p>Written by: {{this.user_id}}</p>
     {{/each}}
 
 
